# babygear-price-check

./: Dockerfile  config.example.json  config.visible.json  fly.toml  pyproject.toml  render.yaml  requirements.txt  wsgi.py
.claude/: settings.local.json
src/babygear_scraper/: __init__.py  classifier.py  cli.py  config.py  database.py  models.py  orchestrator.py  scheduler.py  scraper_base.py
src/babygear_scraper/scrapers/: __init__.py  facebook.py
src/babygear_web/: __init__.py  app.py  seed_data.py
src/babygear_web/templates/: index.html  landing.html
